<resources>
    <string name="app_name">RAF Dnevnjak</string>

    <string name="calendar_name">Calendar</string>
    <array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>
    <string name="monday">Mon.</string>
    <string name="tuesday">Tue.</string>
    <string name="wednesday">Wed.</string>
    <string name="thursday">Thu.</string>
    <string name="friday">Fri.</string>
    <string name="saturday">Sat.</string>
    <string name="sunday">Sun.</string>


    <string name="daily_plan_name">Daily plan</string>
    <string name="past_obligations_text">Show past obligations</string>

    <string name="low_prio">Low</string>
    <string name="mid_prio">Mid</string>
    <string name="high_prio">High</string>

    <string name="profile_name">Profile</string>
    <string name="change_password">Change password</string>
    <string name="logout">Log out</string>

    <string name="emailPlaceholder">student@raf.rs</string>
    <string name="btn_login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>
