<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".calendar.CalendarFragment">

    <TextView
        android:id="@+id/tvMonthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="March 2023."
        android:textColor="@color/main_color_front"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dime_16dp"
            android:text="@string/monday"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dime_16dp"
            android:text="@string/tuesday"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dime_16dp"
            android:text="@string/wednesday"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dime_16dp"
            android:text="@string/thursday"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dime_16dp"
            android:text="@string/friday"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dime_16dp"
            android:text="@string/saturday"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dime_16dp"
            android:text="@string/sunday"
            android:textSize="20sp" />

    </LinearLayout>

    <!--    TODO:   Ovde ide calendar (Neki fragment) -->
    <!--    TODO:   Pritiskom na neki datum se menja fragment -->
    <!--    TODO:   Novi fragment prikazuje obaveze -->


</LinearLayout>