<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layoutPrioButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnLowGreen"
            style="@style/Theme.AppCompat.ButtonTrio"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:text="@string/low_prio" />

        <Button
            android:id="@+id/btnMidYellow"
            style="@style/Theme.AppCompat.ButtonTrio"
            android:layout_weight="1"
            android:backgroundTint="@color/mid_prio_color"
            android:text="@string/mid_prio" />

        <Button
            android:id="@+id/btnHighOrange"
            style="@style/Theme.AppCompat.ButtonTrio"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/high_prio" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>