<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Theme.AppCompat.DayNight.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <ScrollView
        android:id="@+id/svLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_16dp"
        android:layout_marginEnd="@dimen/dim_16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/lLayoutLogin"
            style="@style/Theme.AppCompat.LayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etEmailLogin"
                style="@style/Theme.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_edit_text"
                android:hint="@string/emailPlaceholder"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColorHint="@color/light_grey"
                app:layout_constraintBottom_toTopOf="@id/etUsernameLogin"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etUsernameLogin"
                style="@style/Theme.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_32dp"
                android:background="@drawable/layout_edit_text"
                android:hint="@string/username"
                android:textAlignment="center"
                android:textColorHint="@color/light_grey"
                app:layout_constraintBottom_toTopOf="@id/etPasswordLogin"
                app:layout_constraintTop_toBottomOf="@id/etUsernameLogin" />

            <EditText
                android:id="@+id/etPasswordLogin"
                style="@style/Theme.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_32dp"
                android:background="@drawable/layout_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="@color/light_grey"
                app:layout_constraintBottom_toTopOf="@id/btnLogin"
                app:layout_constraintTop_toBottomOf="@id/etUsernameLogin" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_32dp"
                android:layout_marginTop="@dimen/dim_32dp"
                android:layout_marginEnd="@dimen/dim_32dp"
                android:background="@drawable/round_btn_cyan"
                android:text="@string/btn_login"
                android:textColor="@color/main_color_front"
                android:textSize="@dimen/sp_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPasswordLogin" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
